Context menu working.

--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -10,8 +10,7 @@
 					"nativeMessaging"],
 	"applications": {
 		"gecko": {
-			"id": "5eeb9b8f-bb2d-4c44-b953-80e94f7c2d12"
-			//ID is randomly generated.
+			"id": "WC970_SA@gmail.com"
 		}
 	},
 	"background": {
